# fract

./: .gitignore  ChangeLog  Doxyfile  INSTALL  README  README.md  create_release_binaries  fract.vcproj  make_milestone  ray2sphre.nb
cxxptl/: Makefile  cxxptl.cpp  cxxptl.h  cxxptl.sln  cxxptl.vcproj  sysspec_apple.cpp  sysspec_linux.cpp  sysspec_posix.cpp  sysspec_win32.cpp  tester.cpp
data/: af_final.fsv  axe.fsv  benchmark.fsv  cube.txt  down.fda  heart.fsv  heart.mtl  mapped_cube.mtl  oldbench.fsv  teapot.fsv  topo.fsv  topo2.mtl  ver105_bench.fsv  voxel.fsv  wine.fsv
fract/: AUTHORS  ChangeLog  config.h.in  configure.in  create_release_binaries  create_release_package  fract.kdevelop  fract.sln  fract.vcproj
fract/src/: Makefile.am  MinGW-Makefile  MyGlobal.h  MyTypes.h  aes.cpp  aes.h  antialias.cpp  antialias.h  array.h  asmconfig.h  barriers.h  bbox.h  bitmap.cpp  bitmap.h  blur.cpp  blur.h  cmdline.cpp  cmdline.h  common.cpp  common.h  cpu.cpp  cpu.h  cpuid.h  credits.cpp  cross_vars.h  cvar.cpp  cvar.h  cvarlist.h  cvars.cpp  cvars.h  fract.cpp  fract.h  gfx.cpp  gfx.h  hierarchy.cpp  hierarchy.h  idnames.h  infinite_plane.cpp  infinite_plane.h  konsole.cpp  (+56 more)
launcher/: AUTHORS  Doxyfile  TODO  resource.h  wxfractgui.rc  wxfractgui.sln
omega/: Makefile  README  display.cpp  display.h  fonts.cpp  fonts.h  main.cpp  omega  pluginmanager.cpp  pluginmanager.h  template-header
src/: MinGW-Makefile  MyGlobal.h  MyLimits.h  aes.cpp  array.h  asmconfig.h  bitmap.cpp  bitmap.h  blur.cpp  blur.h  common.cpp  common.h  credits.cpp  credits.h  cross_vars.h  cvarlist.h  cvars.cpp  cvars.h  fract.cpp  fract.h  gfx.h  hierarchy.cpp  infinite_plane.cpp  infinite_plane.h  konsole.cpp  konsole_commands.cpp  light.cpp  light.h  matrix.cpp  matrix.h  memory.cpp  mesh.cpp  physics.cpp  profile.cpp  profile.h  progress.cpp  radiosity.cpp  radiosity.h  random.cpp  random.h  (+22 more)
tools/: coords_to_106.c  find_circumscribed_sphere.cpp  gcc2msvc.pas  hashgen.c  recreate_terrain  sample_normalizer.cpp  smooth.c  tesselate.cpp
txt/: 1.06  2cpu-mach.txt  Fract in some forums(links).txt  Memory-Usage.txt  Optimizations.txt  PIIIacceleration.txt  Shortcuts.txt  p1-performance.txt  p2-bench.txt  todo  v1.0.3c-profile.txt
wxfractgui/: TODO  configure.in  winxp.manifest  (+2 more)
wxfractgui/src/: Makefile.am  advancedtab.cpp  advancedtab.h  basictab.cpp  basictab.h  comparedlg.cpp  comparedlg.h  countries_list.h  cpu_list.h  cpuid.cpp  cpuid.h  cpuid_database.h  cpulistdlg.cpp  cpulistdlg.h  db.xml  fonts.cpp  fonts.h  fract_specific.cpp  fract_specific.h  generictab.h  global.h  luxi_font.cpp  mainframe.cpp  mainframe.h  resbrowser.cpp  resbrowser.h  senddialog.cpp  senddialog.h  showcpu.cpp  wxfractgui.cpp  wxfractgui.desktop
(+60 files in other folders)
